--- a/angular-dapp/src/app/app.component.html
+++ b/angular-dapp/src/app/app.component.html
@@ -1,2 +1,2 @@
-<mat-toolbar color="primary">Angular Truffle Box</mat-toolbar>
+<mat-toolbar color="primary">Sponsor Project</mat-toolbar>
 <app-meta-sender></app-meta-sender>
