--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -1,1 +1,8 @@
-<p>list-offers works!</p>
+
+<app-apply-offer
+  [accounts]="accounts"
+  song="6872036029340158726"
+  limitDays="2"
+  minLikes="2"
+  contractAddress="0xD573c333107B6A39120397a66cBb5395f8B4174d"
+></app-apply-offer>
