--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -1,3 +1,10 @@
+<button>
+  <a routerLink="/offers" routerLinkActive="active">Offers</a>
+</button>
+<button>
+  <a routerLink="/create" routerLinkActive="active">Create Offer</a>
+</button>
+
 <mat-card class="offer-details">
   <mat-card-header>
     <mat-card-title>{{contractAddress}}</mat-card-title>
