--- a/angular-dapp/src/app/create-offer/create-offer.component.html
+++ b/angular-dapp/src/app/create-offer/create-offer.component.html
@@ -1,3 +1,6 @@
+<button>
+  <a routerLink="/offers" routerLinkActive="active">Offers</a>
+</button>
 <mat-card class="offer-details">
   <mat-card-header>
     <mat-card-title>Offer #1</mat-card-title>
