add Table on offerlist

--- a/angular-dapp/src/app/create-offer/create-offer.component.html
+++ b/angular-dapp/src/app/create-offer/create-offer.component.html
@@ -47,7 +47,8 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button
+    <button mat-raised-button
+      class="center"
       type="submit"
       (click)="createContract()"
       color="primary">
