--- a/angular-dapp/src/app/apply-offer/apply-offer.component.css
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.css
@@ -13,3 +13,10 @@
 .full-width {
   width: 100%;
 }
+
+.center {
+  margin: 0;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
