--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -53,17 +53,12 @@
     </form>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button
+    <button mat-raised-button
+      class="center"
       type="submit"
       (click)="applyOffer()"
       color="primary">
       Apply Offer</button>
-  </mat-card-actions>
-  <mat-card-actions>
-    <button mat-button
-      (click)="w()"
-      color="primary">
-      withrs</button>
   </mat-card-actions>
 </mat-card>
 
