--- a/angular-dapp/src/styles.css
+++ b/angular-dapp/src/styles.css
@@ -1,2 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;500;600&display=swap');
+* {
+  font-family: 'Comfortaa', cursive;
+  font-weight: 600;
+}
