--- a/angular-dapp/src/app/create-offer/create-offer.component.html
+++ b/angular-dapp/src/app/create-offer/create-offer.component.html
@@ -1,7 +1,4 @@
-<button>
-  <a routerLink="/offers" routerLinkActive="active">Offers</a>
-</button>
-<mat-card class="offer-details">
+<mat-card class="offer-details mat-elevation-z8">
   <mat-card-header>
     <mat-card-title>Offer #1</mat-card-title>
     <mat-card-subtitle>Xavi Santamaria</mat-card-subtitle>
