--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -1,11 +1,4 @@
-<button>
-  <a routerLink="/offers" routerLinkActive="active">Offers</a>
-</button>
-<button>
-  <a routerLink="/create" routerLinkActive="active">Create Offer</a>
-</button>
-
-<mat-card class="offer-details">
+<mat-card class="offer-details mat-elevation-z8">
   <mat-card-header>
     <mat-card-title>{{contractAddress}}</mat-card-title>
     <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
