--- a/angular-dapp/src/styles.css
+++ b/angular-dapp/src/styles.css
@@ -5,3 +5,9 @@
   font-family: 'Comfortaa', cursive;
   font-weight: 600;
 }
+
+
+/* body {
+  background: radial-gradient(50% 50% at 50% 50%, rgba(255, 0, 122, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+  background-image: radial-gradient(50% 50% at 50% 50%, rgba(255, 0, 122, 0.2) 0%, rgba(255, 255, 255, 0) 100%);
+} */
