--- a/angular-dapp/src/app/apply-offer/apply-offer.component.css
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.css
@@ -14,8 +14,8 @@
 }
 
 .center {
-  margin: 0;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  /* display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center; */
 }
