--- a/angular-dapp/src/app/create-offer/create-offer.component.css
+++ b/angular-dapp/src/app/create-offer/create-offer.component.css
@@ -1,6 +1,7 @@
 .offer-details {
   max-width: 800px;
   margin: auto;
+  text-align: center;
 }
 
 .offer-form {
@@ -11,11 +12,4 @@
 
 .full-width {
   width: 100%;
-}
-
-.center {
-  margin: 0;
-  left: 50%;
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
 }
