--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -1,7 +1,7 @@
 <div class="mat-elevation-z8 container-table">
-  <table mat-table [dataSource]="dataSource">
+  <table mat-table matSort [dataSource]="dataSource">
 
-    <!-- Position Column -->
+    <!-- Address Column -->
     <ng-container matColumnDef="address">
       <th mat-header-cell *matHeaderCellDef>Contract address </th>
       <td mat-cell *matCellDef="let offer">
@@ -13,26 +13,36 @@
       </td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Song Column -->
     <ng-container matColumnDef="song">
-      <th mat-header-cell *matHeaderCellDef> Song Url </th>
-      <td mat-cell *matCellDef="let offer"> {{offer.song}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Song Url </th>
+      <td mat-cell *matCellDef="let offer">
+        <a mat-button
+          href="{{offer.song}}"
+          target="_blank">
+          {{this.stringHelperService.simplifySongUrl(offer.song)}}
+        </a>
+      </td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Likes Column -->
     <ng-container matColumnDef="minLikes">
-      <th mat-header-cell *matHeaderCellDef> Min Likes </th>
-      <td mat-cell *matCellDef="let offer"> {{offer.minLikes}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Min Likes </th>
+      <td mat-cell *matCellDef="let offer">
+        <!-- this one is for the sort to work -->
+        <span hidden="true">{{offer.minLikes}}</span>
+        {{this.stringHelperService.simplifyLikes(offer.minLikes)}}
+      </td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Reward Column -->
     <ng-container matColumnDef="value">
-      <th mat-header-cell *matHeaderCellDef> Reward </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Reward </th>
       <td mat-cell *matCellDef="let offer"> {{stringHelperService.convertWeiToEth(offer.value)}} ETH </td>
     </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="actions" stickyEnd>
+    <!-- Apply Button -->
+    <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>  </th>
       <td mat-cell *matCellDef="let offer">
         <button mat-raised-button color="primary"
