use url and id on offer

--- a/angular-dapp/src/app/app.component.html
+++ b/angular-dapp/src/app/app.component.html
@@ -3,6 +3,7 @@
     mat-button
     routerLink="/offers"
     routerLinkActive="active">
+    <img class="logo" src="assets/logoS3.png" style="width: 30px;">
     Sponsor Project
   </a>
 
