--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -11,7 +11,12 @@
         <mat-form-field class="full-width">
           <mat-label>Song</mat-label>
           <input matInput readonly
-            [(ngModel)]="song" name="song">
+            [(ngModel)]="songSimplified" name="song">
+          <a mat-button matSuffix mat-icon-button aria-label="Clear"
+            href="{{song}}"
+            target="_blank">
+            <mat-icon aria-hidden="false">api</mat-icon>
+          </a>
         </mat-form-field>
 
         <mat-form-field class="full-width">
@@ -32,6 +37,7 @@
           <mat-label>Reward Value</mat-label>
           <input matInput readonly
             [(ngModel)]="value" name="value">
+          <span matSuffix>wei</span>
           <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="setBalance()">
             <mat-icon aria-hidden="false" aria-label="Refresh balance">refresh</mat-icon>
           </button>
