--- a/angular-dapp/src/app/create-offer/create-offer.component.html
+++ b/angular-dapp/src/app/create-offer/create-offer.component.html
@@ -1,7 +1,7 @@
   <mat-card class="offer-details mat-elevation-z8">
     <mat-card-header>
       <mat-card-title>Offer #1</mat-card-title>
-      <mat-card-subtitle>Xavi Santamaria</mat-card-subtitle>
+      <mat-card-subtitle></mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <form class="offer-form" (ngSubmit)="createContract()">
