--- a/angular-dapp/src/app/list-offers/list-offers.component.css
+++ b/angular-dapp/src/app/list-offers/list-offers.component.css
@@ -22,3 +22,23 @@ table {
 td a:hover {
   text-decoration: underline;
 }
+
+td a:hover mat-icon {
+  color: lightslategray;
+}
+
+td a mat-icon {
+  color: white
+}
+
+.example-loading-shade {
+  top: 0;
+  left: 0;
+  bottom: 56px;
+  right: 0;
+  background: rgba(0, 0, 0, 0.15);
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
