--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -1,5 +1,10 @@
 <div class="mat-elevation-z8 container-table">
-  <table mat-table matSort [dataSource]="dataSource">
+
+  <div class="example-loading-shade" *ngIf="dataSource.data.length === 0">
+    No Offers found
+  </div>
+
+  <table mat-table matSort [dataSource]="dataSource" *ngIf="dataSource.data.length !== 0">
 
     <!-- Address Column -->
     <ng-container matColumnDef="address">
@@ -9,6 +14,7 @@
           href="https://kovan.etherscan.io/address/{{offer.address}}"
           target="_blank">
           {{stringHelperService.simplifyAddress(offer.address)}}
+          <mat-icon aria-hidden="false" style="font-size: 15px;">launch</mat-icon>
         </a>
       </td>
     </ng-container>
@@ -21,6 +27,7 @@
           href="{{offer.song}}"
           target="_blank">
           {{this.stringHelperService.simplifySongUrl(offer.song)}}
+          <mat-icon aria-hidden="false" style="font-size: 15px;">launch</mat-icon>
         </a>
       </td>
     </ng-container>
@@ -38,7 +45,10 @@
     <!-- Reward Column -->
     <ng-container matColumnDef="value">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Reward </th>
-      <td mat-cell *matCellDef="let offer"> {{stringHelperService.convertWeiToEth(offer.value)}} ETH </td>
+      <td mat-cell *matCellDef="let offer">
+        <span hidden="true">{{offer.value}}</span>
+        {{stringHelperService.convertWeiToEth(offer.value)}} ETH
+      </td>
     </ng-container>
 
     <!-- Apply Button -->
@@ -56,5 +66,6 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[10]" showFirstLastButtons *ngIf="dataSource.data.length > 10">
+  </mat-paginator>
 </div>
