--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -1,5 +1,4 @@
 <div class="center">
-
   <mat-card class="offer-details mat-elevation-z8">
     <mat-card-header>
       <mat-card-title id="addrTitle">{{contractAddress}}
@@ -65,7 +64,12 @@
         type="submit"
         (click)="applyOffer()"
         color="primary">
-        Apply Offer</button>
+        Apply to Offer</button>
+      <button mat-raised-button
+        type="submit"
+        (click)="applyOffer()"
+        color="primary">
+        Close Offer</button>
     </mat-card-actions>
   </mat-card>
 
