--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -57,7 +57,7 @@
       <td mat-cell *matCellDef="let offer">
         <button mat-raised-button color="primary"
           (click)="gotoOffer(offer.address)">
-          Apply
+          Open
         </button>
       </td>
     </ng-container>
