--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -59,6 +59,15 @@
         </mat-form-field>
       </form>
     </mat-card-content>
+
+    <mat-card-actions>
+      <button mat-raised-button
+        type="submit"
+        (click)="checkVideoMusic()"
+        color="primary">
+        Check Video Music</button>
+    </mat-card-actions>
+
     <mat-card-actions>
       <button mat-raised-button
         type="submit"
