--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -4,7 +4,21 @@
     No Offers found
   </div>
 
-  <table mat-table matSort [dataSource]="dataSource" *ngIf="dataSource.data.length !== 0">
+  <table mat-table matSort [dataSource]="dataSource" *ngIf="dataSource.data.length !== 0"
+    matSort
+    matSortActive="created"
+    matSortDisableClear
+    matSortDirection="desc"
+  >
+    <!-- Likes Column -->
+    <ng-container matColumnDef="time">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Closing Time </th>
+      <td mat-cell *matCellDef="let offer">
+        <!-- this one is for the sort to work -->
+        <span hidden="true">{{offer.time}}</span>
+        {{stringHelperService.getDateLocalFromEpoch(offer.time)}}
+      </td>
+    </ng-container>
 
     <!-- Address Column -->
     <ng-container matColumnDef="address">
