--- a/angular-dapp/src/app/create-offer/create-offer.component.html
+++ b/angular-dapp/src/app/create-offer/create-offer.component.html
@@ -58,7 +58,7 @@
 
     <div *ngIf="isLoading">Please wait until the contract is created.</div>
     <div *ngIf="contractAddress">
-      Send 1 Link token to the contract created to accept videos: <strong>{{contractAddress}}</strong></div>
+      Send 3 Link tokens to the contract created to accept videos: <strong>{{contractAddress}}</strong></div>
   </mat-card>
 <!-- <button mat-button
   type="submit"
