--- a/angular-dapp/src/app/list-offers/list-offers.component.html
+++ b/angular-dapp/src/app/list-offers/list-offers.component.html
@@ -6,7 +6,7 @@
 
   <table mat-table matSort [dataSource]="dataSource" *ngIf="dataSource.data.length !== 0"
     matSort
-    matSortActive="created"
+    matSortActive="time"
     matSortDisableClear
     matSortDirection="desc"
   >
