Add check video music before applying

--- a/angular-dapp/src/app/apply-offer/apply-offer.component.html
+++ b/angular-dapp/src/app/apply-offer/apply-offer.component.html
@@ -63,6 +63,7 @@
     <mat-card-actions>
       <button mat-raised-button
         type="submit"
+        [disabled]="!song || !videoUrl || 0 === videoUrl.length"
         (click)="checkVideoMusic()"
         color="primary">
         Check Video Music</button>
